--- a/node-chatbot/code/package.json
+++ b/node-chatbot/code/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "NodeJS Chatbot",
   "scripts": {
-    "telegram": "node src/telegram.js",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
